# Deasystem

./: CMakeLists.txt  README.md
inc/: AbstractFread.hpp  AbstractFwrite.hpp  Directory.hpp  Element.hpp  File.hpp  FsSystem.hpp  StdStream.hpp
inc/Filetypes/: CustomFile.hpp  RawFile.hpp  String16File.hpp  String32File.hpp  String8File.hpp
src/: Directory.cpp  Element.cpp  File.cpp  FsSystem.cpp  StdStream.cpp
src/Filetypes/: RawFile.cpp  String16File.cpp  String32File.cpp  String8File.cpp
